Fixed the scrollbar issue finally

--- a/public/modules/giftcards/css/giftcards.css
+++ b/public/modules/giftcards/css/giftcards.css
@@ -259,7 +259,7 @@ label.inputlabel {
 #clique_amt_selection {
   height: 45px !important;
   position: relative;
-  overflow: hidden; /* don't show scroll bar */
+   overflow: hidden; /* don't show scroll bar */
   text-align: center; /* horizontally center this scrollwindow on the page */
 }
 
@@ -267,8 +267,8 @@ label.inputlabel {
   width: 80%;
   max-width: 600px;
   display: inline-block;
-  overflow-x: scroll;
-  height: 10em; /* push scroll bar downwards out of field of view */
+   overflow-x: scroll;
+  height: 100000em; /* push scroll bar downwards out of field of view */
   white-space: nowrap; /* don't wrap the price spans */
 }
 
